--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Aggie Wheeler Bateman",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg-promise": "^10.9.2"
   }
