--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aggie Wheeler Bateman",
@@ -13,5 +14,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg-promise": "^10.9.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
